--- a/D3Experiment/D3Experiment.csproj
+++ b/D3Experiment/D3Experiment.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Media.Images.Core\Media.Images.Core.csproj" />
+  </ItemGroup>
+
 </Project>
